# gwcapital-scamhunter

./: .env.example  .gitignore  README.md  build_app.sh  pyproject.toml  run.command  run.sh
frontend/: app.js  index.html  styles.css
src/: agent.py  api.py  event_bus.py  main.py  tron_client.py
src/memory/: graph.py
src/prompts/: system.md
src/tools/: definitions.py  executors.py
tests/: smoke_agent.py  test_agent.py  test_tron_client.py
