[project]
name = "tron-scam-agent"
version = "0.2.0"
description = "GWCAPITAL · TRON ScamHunter — DeepSeek 驱动的链上诈骗追溯桌面工具"
authors = [{name = "GWCAPITAL"}]
requires-python = ">=3.11"
dependencies = [
    "openai>=1.54.0",
    "httpx>=0.27.0",
    "pywebview>=5.0",
    "sqlalchemy>=2.0",
    "tenacity>=8.2.0",
    "python-dotenv>=1.0.0",
    "markdown2>=2.5.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
